# amigoapi

./: .env  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: .env.template
config/nginx/: nginx.conf
docker/postgres/: Dockerfile  init-postgres.sql
docker/python/: Dockerfile
migrations/: env.py
migrations/versions/: 0425279bc2cd_users_revision.py  6ec6a10f5f31_add_birthday_to_user.py  d507da4f66ef_recipes_and_reviews_models.py
src/apps/jwt/: routers.py
src/apps/recipes/: models.py  routers.py  schemas.py  services.py
src/apps/reviews/: models.py  routers.py  schemas.py  services.py  utils.py
src/apps/users/: models.py  routers.py  schemas.py  services.py
src/core/: exceptions.py
src/database/: connection.py
src/dependencies/: users.py
src/settings/: __init__.py  database.py
tests/: conftest.py
tests/test_apps/: conftest.py
tests/test_apps/recipes/: test_routers.py
tests/test_apps/reviews/: test_routers.py
tests/test_apps/users/: test_routers.py
