[tool.poetry]
name = "amigoapi"
version = "0.1.0"
description = "Culinary recipes website created using FastAPI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
mypy = "^0.950"
black = "^22.3.0"
uvicorn = "^0.17.6"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
